--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,4 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/taski_backend:latest 
+          tags: tenebrem/taski_backend:latest 
